force-app/main/default/objects/Activity/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>ISPICKVAL(Status, &apos;Completed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>