force-app/main/default/objects/Activity/fields/Completed_flag__c.field-meta.xml
<CustomField>
    <fullName>Completed_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed flag</label>
    <type>Checkbox</type>
</CustomField>