force-app/main/default/objects/Activity/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended group health education classes</fullName>
            </value>
            <value>
                <fullName>Demonstrated increased knowledge due to attending health education classes</fullName>
            </value>
            <value>
                <fullName>Received individual targeted health outreach services</fullName>
            </value>
            <value>
                <fullName>Received medical/navigation support services</fullName>
            </value>
            <value>
                <fullName>Completed their plan of care due to receiving medical/navigation support services</fullName>
            </value>
            <value>
                <fullName>Received mental health/navigation support services</fullName>
            </value>
            <value>
                <fullName>Completed their plan of care due to receiving mental health/navigation support services</fullName>
            </value>
            <value>
                <fullName>Attended wellness group</fullName>
            </value>
            <value>
                <fullName>Demonstrated improvement in their well-being due to attending wellness group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>