force-app/main/default/objects/Activity/fields/Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task__c</fullName>
    <label>Parent Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>