force-app/main/default/objects/Activity/fields/Step_ID__c.field-meta.xml
<CustomField>
    <fullName>Step_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step ID</label>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>