force-app/main/default/objects/Activity/fields/Task_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Sub_Type__c</fullName>
    <label>Task Sub-Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>